--- a/first_analysis.ipynb
+++ b/first_analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
@@ -33,6 +33,7 @@
     "import matplotlib.pyplot as plt\n",
     "from IPython.display import SVG, display\n",
     "import chess.svg\n",
+    "board_feats_disagreements = pd.read_csv(\"./disagreement_df.csv\")\n",
     "games_df = pd.read_csv(\"./Maia-Leela-Stock-empiricalQ.csv\")\n",
     "unique_games_df = games_df.drop_duplicates(subset='game')\n",
     "grouped_df = unique_games_df.groupby('game')['result'].value_counts().unstack(fill_value=0)\n",
@@ -1990,6 +1991,274 @@
     "print(f\"Percentage of times Maia is chosen after it was chosen the previous move: {percent_maia.__round__(3)}%\")\n",
     "print(f\"Percentage of times Leela is chosen in disagreements: {(len(leela_df) / len(disagreement_df) * 100).__round__(3)}%\")\n",
     "print(f\"Percentage of times Leela is chosen after it was chosen the previous move: {percent_leela.__round__(3)}%\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "outputs": [],
+   "source": [
+    "def calculate_percent_of_combination(total, bot_name1, bot_name2):\n",
+    "    ctr = 0\n",
+    "    cur_game = -1\n",
+    "    cur_bot = None\n",
+    "    for index, row in disagreement_df.iterrows():\n",
+    "        if cur_game != row['game']:\n",
+    "            cur_game = row['game']\n",
+    "            cur_bot = row['contributor']\n",
+    "            continue\n",
+    "        if cur_bot == bot_name1 and row['contributor'] == bot_name2:\n",
+    "            ctr += 1\n",
+    "        cur_bot = row['contributor']\n",
+    "    return (ctr / total) * 100"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of the bigram 'Maia-Maia': 19.384%\n",
+      "Percentage of the bigram 'Maia-Leela': 11.706%\n",
+      "Percentage of the bigram 'Leela-Maia': 14.933%\n",
+      "Percentage of the bigram 'Leela-Leela': 44.443%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Percentage of the bigram 'Maia-Maia': {calculate_percent_of_combination(len(disagreement_df), 'maia1200', 'maia1200').__round__(3)}%\")\n",
+    "print(f\"Percentage of the bigram 'Maia-Leela': {calculate_percent_of_combination(len(disagreement_df), 'maia1200', 'leela10b2500').__round__(3)}%\")\n",
+    "print(f\"Percentage of the bigram 'Leela-Maia': {calculate_percent_of_combination(len(disagreement_df), 'leela10b2500', 'maia1200').__round__(3)}%\")\n",
+    "print(f\"Percentage of the bigram 'Leela-Leela': {calculate_percent_of_combination(len(disagreement_df), 'leela10b2500', 'leela10b2500').__round__(3)}%\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "outputs": [],
+   "source": [
+    "def calculate_percent_of_combination_3(total, bot_name1, bot_name2, bot_name3):\n",
+    "    ctr = 0\n",
+    "    cur_game = -1\n",
+    "    cur_bots = [None, None, None]\n",
+    "\n",
+    "    for index, row in disagreement_df.iterrows():\n",
+    "        if cur_game != row['game']:\n",
+    "            cur_game = row['game']\n",
+    "            cur_bots = [None, None, None]\n",
+    "            continue\n",
+    "\n",
+    "        cur_bots.pop(0)\n",
+    "        cur_bots.append(row['contributor'])\n",
+    "\n",
+    "        if cur_bots[0] == bot_name1 and cur_bots[1] == bot_name2 and cur_bots[2] == bot_name3:\n",
+    "            ctr += 1\n",
+    "\n",
+    "    return (ctr / total) * 100"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of the trigram maia1200, maia1200, maia1200: 10.202%\n",
+      "Percentage of the trigram maia1200, maia1200, leela10b2500: 4.661%\n",
+      "Percentage of the trigram maia1200, leela10b2500, maia1200: 2.864%\n",
+      "Percentage of the trigram maia1200, leela10b2500, leela10b2500: 6.731%\n",
+      "Percentage of the trigram leela10b2500, maia1200, maia1200: 6.927%\n",
+      "Percentage of the trigram leela10b2500, maia1200, leela10b2500: 4.791%\n",
+      "Percentage of the trigram leela10b2500, leela10b2500, maia1200: 8.93%\n",
+      "Percentage of the trigram leela10b2500, leela10b2500, leela10b2500: 26.638%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import product\n",
+    "\n",
+    "names = ['maia1200', 'leela10b2500']\n",
+    "\n",
+    "permutations_of_3 = list(product(names, repeat=3))\n",
+    "for perm in permutations_of_3:\n",
+    "    print(f\"Percentage of the trigram {perm[0]}, {perm[1]}, {perm[2]}: {calculate_percent_of_combination_3(len(disagreement_df), perm[0], perm[1], perm[2]).__round__(3)}%\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Pearson Correlation between board features and Maia, Leela scores:"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Correlation between color and Maia score: 0.012\n",
+      "Correlation between color and Leela score: 0.007\n",
+      "Correlation between move_num and Maia score: -0.02\n",
+      "Correlation between move_num and Leela score: -0.018\n",
+      "Correlation between legal_moves_player and Maia score: 0.015\n",
+      "Correlation between legal_moves_player and Leela score: 0.012\n",
+      "Correlation between legal_moves_opponent and Maia score: 0.008\n",
+      "Correlation between legal_moves_opponent and Leela score: 0.012\n",
+      "Correlation between legal_captures_player and Maia score: 0.011\n",
+      "Correlation between legal_captures_player and Leela score: 0.013\n",
+      "Correlation between legal_captures_opponent and Maia score: -0.005\n",
+      "Correlation between legal_captures_opponent and Leela score: -0.001\n",
+      "Correlation between in_check and Maia score: -0.01\n",
+      "Correlation between in_check and Leela score: 0.002\n",
+      "Correlation between check_to_give_player and Maia score: -0.01\n",
+      "Correlation between check_to_give_player and Leela score: -0.011\n",
+      "Correlation between check_to_give_opponent and Maia score: -0.013\n",
+      "Correlation between check_to_give_opponent and Leela score: -0.01\n",
+      "Correlation between queen_threatened_player and Maia score: -0.007\n",
+      "Correlation between queen_threatened_player and Leela score: 0.001\n",
+      "Correlation between queen_threatened_opponent and Maia score: -0.009\n",
+      "Correlation between queen_threatened_opponent and Leela score: -0.009\n",
+      "Correlation between castling_rights_player and Maia score: -0.004\n",
+      "Correlation between castling_rights_player and Leela score: 0.001\n",
+      "Correlation between castling_rights_opponent and Maia score: 0.008\n",
+      "Correlation between castling_rights_opponent and Leela score: 0.003\n",
+      "Correlation between enough_material_to_win_player and Maia score: -0.01\n",
+      "Correlation between enough_material_to_win_player and Leela score: -0.002\n",
+      "Correlation between enough_material_to_win_opponent and Maia score: 0.005\n",
+      "Correlation between enough_material_to_win_opponent and Leela score: -0.002\n",
+      "Correlation between number_pieces_player and Maia score: 0.024\n",
+      "Correlation between number_pieces_player and Leela score: 0.024\n",
+      "Correlation between number_pieces_opponent and Maia score: 0.022\n",
+      "Correlation between number_pieces_opponent and Leela score: 0.02\n",
+      "Correlation between materiel_points_player and Maia score: 0.023\n",
+      "Correlation between materiel_points_player and Leela score: 0.024\n",
+      "Correlation between material_points_opponent and Maia score: 0.019\n",
+      "Correlation between material_points_opponent and Leela score: 0.018\n",
+      "Correlation between knights_num_player and Maia score: 0.018\n",
+      "Correlation between knights_num_player and Leela score: 0.02\n",
+      "Correlation between knights_num_opponent and Maia score: 0.019\n",
+      "Correlation between knights_num_opponent and Leela score: 0.017\n",
+      "Correlation between bishops_num_player and Maia score: 0.021\n",
+      "Correlation between bishops_num_player and Leela score: 0.016\n",
+      "Correlation between bishops_num_opponent and Maia score: 0.02\n",
+      "Correlation between bishops_num_opponent and Leela score: 0.022\n",
+      "Correlation between rooks_num_player and Maia score: 0.012\n",
+      "Correlation between rooks_num_player and Leela score: 0.013\n",
+      "Correlation between rooks_num_opponent and Maia score: -0.005\n",
+      "Correlation between rooks_num_opponent and Leela score: -0.005\n",
+      "Correlation between pawns_num_player and Maia score: 0.021\n",
+      "Correlation between pawns_num_player and Leela score: 0.021\n",
+      "Correlation between pawns_num_opponent and Maia score: 0.022\n",
+      "Correlation between pawns_num_opponent and Leela score: 0.021\n",
+      "Correlation between queens_num_player and Maia score: 0.017\n",
+      "Correlation between queens_num_player and Leela score: 0.018\n",
+      "Correlation between queens_num_opponent and Maia score: 0.02\n",
+      "Correlation between queens_num_opponent and Leela score: 0.019\n",
+      "Correlation between num_pieces_in_center_player and Maia score: 0.012\n",
+      "Correlation between num_pieces_in_center_player and Leela score: 0.015\n",
+      "Correlation between num_pieces_in_center_opponent and Maia score: 0.021\n",
+      "Correlation between num_pieces_in_center_opponent and Leela score: 0.022\n",
+      "Correlation between attack_balance_center1 and Maia score: 0.01\n",
+      "Correlation between attack_balance_center1 and Leela score: 0.009\n",
+      "Correlation between attack_balance_center2 and Maia score: -0.0\n",
+      "Correlation between attack_balance_center2 and Leela score: 0.005\n",
+      "Correlation between attack_balance_center3 and Maia score: 0.007\n",
+      "Correlation between attack_balance_center3 and Leela score: 0.009\n",
+      "Correlation between king_safety_player1 and Maia score: -0.012\n",
+      "Correlation between king_safety_player1 and Leela score: -0.011\n",
+      "Correlation between king_safety_player2 and Maia score: -0.013\n",
+      "Correlation between king_safety_player2 and Leela score: -0.015\n",
+      "Correlation between king_safety_player3 and Maia score: -0.003\n",
+      "Correlation between king_safety_player3 and Leela score: -0.001\n",
+      "Correlation between king_safety_opponent1 and Maia score: -0.003\n",
+      "Correlation between king_safety_opponent1 and Leela score: -0.006\n",
+      "Correlation between king_safety_opponent2 and Maia score: -0.003\n",
+      "Correlation between king_safety_opponent2 and Leela score: -0.006\n",
+      "Correlation between king_safety_opponent3 and Maia score: -0.003\n",
+      "Correlation between king_safety_opponent3 and Leela score: -0.006\n",
+      "Correlation between king_freedom_to_move_player and Maia score: nan\n",
+      "Correlation between king_freedom_to_move_player and Leela score: nan\n",
+      "Correlation between king_freedom_to_move_opponent and Maia score: -0.017\n",
+      "Correlation between king_freedom_to_move_opponent and Leela score: -0.012\n",
+      "Correlation between proportion_defended_pieces_player and Maia score: 0.006\n",
+      "Correlation between proportion_defended_pieces_player and Leela score: 0.006\n",
+      "Correlation between proportion_defended_pieces_opponent and Maia score: 0.015\n",
+      "Correlation between proportion_defended_pieces_opponent and Leela score: 0.012\n",
+      "Correlation between control1 and Maia score: 0.008\n",
+      "Correlation between control1 and Leela score: 0.006\n",
+      "Correlation between control2 and Maia score: -0.001\n",
+      "Correlation between control2 and Leela score: 0.003\n",
+      "Correlation between control3 and Maia score: 0.004\n",
+      "Correlation between control3 and Leela score: 0.01\n",
+      "Correlation between pawn_structure_player and Maia score: 0.015\n",
+      "Correlation between pawn_structure_player and Leela score: 0.018\n",
+      "Correlation between pawn_structure_opponent and Maia score: 0.016\n",
+      "Correlation between pawn_structure_opponent and Leela score: 0.009\n",
+      "Correlation between concentration_player and Maia score: 0.007\n",
+      "Correlation between concentration_player and Leela score: 0.003\n",
+      "Correlation between concentration_opponent and Maia score: -0.009\n",
+      "Correlation between concentration_opponent and Leela score: 0.001\n",
+      "Correlation between concentration_both and Maia score: 0.005\n",
+      "Correlation between concentration_both and Leela score: 0.006\n",
+      "Correlation between open_files_player and Maia score: -0.019\n",
+      "Correlation between open_files_player and Leela score: -0.019\n",
+      "Correlation between open_files_opponent and Maia score: -0.021\n",
+      "Correlation between open_files_opponent and Leela score: -0.02\n",
+      "Correlation between open_files_controlled_player and Maia score: 0.005\n",
+      "Correlation between open_files_controlled_player and Leela score: 0.006\n",
+      "Correlation between open_files_controlled_opponent and Maia score: -0.014\n",
+      "Correlation between open_files_controlled_opponent and Leela score: -0.009\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_99129/2223366257.py:4: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
+      "  for col, series in board_feats_disagreements.iteritems():\n"
+     ]
+    }
+   ],
+   "source": [
+    "board_feats_disagreements['maia1200_eval'] = disagreement_df['maia1200_eval']\n",
+    "board_feats_disagreements['leela10b2500_eval'] = disagreement_df['leela10b2500_eval']\n",
+    "correlation_matrix_feats = board_feats_disagreements.corr()\n",
+    "for col, series in board_feats_disagreements.iteritems():\n",
+    "    if col not in ['maia1200_eval', 'leela10b2500_eval']:\n",
+    "        print(f\"Correlation between {col} and Maia score: {correlation_matrix_feats.loc['maia1200_eval', col].__round__(3)}\")\n",
+    "        print(f\"Correlation between {col} and Leela score: {correlation_matrix_feats.loc['leela10b2500_eval', col].__round__(3)}\")"
    ],
    "metadata": {
     "collapsed": false
