--- a/first_analysis.ipynb
+++ b/first_analysis.ipynb
@@ -2112,6 +2112,74 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": 69,
+   "outputs": [],
+   "source": [
+    "def calculate_percent_of_combination_4(total, bot_name1, bot_name2, bot_name3, bot_name4):\n",
+    "    ctr = 0\n",
+    "    cur_game = -1\n",
+    "    cur_bots = [None, None, None, None]\n",
+    "\n",
+    "    for index, row in disagreement_df.iterrows():\n",
+    "        if cur_game != row['game']:\n",
+    "            cur_game = row['game']\n",
+    "            cur_bots = [None, None, None, None]\n",
+    "            continue\n",
+    "\n",
+    "        cur_bots.pop(0)\n",
+    "        cur_bots.append(row['contributor'])\n",
+    "\n",
+    "        if cur_bots[0] == bot_name1 and cur_bots[1] == bot_name2 and cur_bots[2] == bot_name3 and cur_bots[3] == bot_name4:\n",
+    "            ctr += 1\n",
+    "\n",
+    "    return (ctr / total) * 100"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of the quadgram maia1200, maia1200, maia1200, maia1200: 5.539%\n",
+      "Percentage of the quadgram maia1200, maia1200, maia1200, leela10b2500: 2.241%\n",
+      "Percentage of the quadgram maia1200, maia1200, leela10b2500, maia1200: 1.285%\n",
+      "Percentage of the quadgram maia1200, maia1200, leela10b2500, leela10b2500: 2.809%\n",
+      "Percentage of the quadgram maia1200, leela10b2500, maia1200, maia1200: 1.45%\n",
+      "Percentage of the quadgram maia1200, leela10b2500, maia1200, leela10b2500: 0.987%\n",
+      "Percentage of the quadgram maia1200, leela10b2500, leela10b2500, maia1200: 1.763%\n",
+      "Percentage of the quadgram maia1200, leela10b2500, leela10b2500, leela10b2500: 4.391%\n",
+      "Percentage of the quadgram leela10b2500, maia1200, maia1200, maia1200: 3.905%\n",
+      "Percentage of the quadgram leela10b2500, maia1200, maia1200, leela10b2500: 2.0%\n",
+      "Percentage of the quadgram leela10b2500, maia1200, leela10b2500, maia1200: 1.315%\n",
+      "Percentage of the quadgram leela10b2500, maia1200, leela10b2500, leela10b2500: 3.101%\n",
+      "Percentage of the quadgram leela10b2500, leela10b2500, maia1200, maia1200: 4.652%\n",
+      "Percentage of the quadgram leela10b2500, leela10b2500, maia1200, leela10b2500: 3.14%\n",
+      "Percentage of the quadgram leela10b2500, leela10b2500, leela10b2500, maia1200: 5.982%\n",
+      "Percentage of the quadgram leela10b2500, leela10b2500, leela10b2500, leela10b2500: 18.308%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import product\n",
+    "\n",
+    "names = ['maia1200', 'leela10b2500']\n",
+    "\n",
+    "permutations_of_4 = list(product(names, repeat=4))\n",
+    "for perm in permutations_of_4:\n",
+    "    print(f\"Percentage of the quadgram {perm[0]}, {perm[1]}, {perm[2]}, {perm[3]}: {calculate_percent_of_combination_4(len(disagreement_df), perm[0], perm[1], perm[2], perm[3]).__round__(3)}%\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "Pearson Correlation between board features and Maia, Leela scores:"
@@ -2122,7 +2190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 71,
    "outputs": [
     {
      "name": "stdout",
