--- a/first_analysis.ipynb
+++ b/first_analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -275,7 +275,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_99129/2137939842.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_91625/2137939842.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  correlation_matrix = disagreement_df.corr()\n"
      ]
     }
@@ -350,7 +350,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_99129/2503335194.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_91625/2503335194.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -414,7 +414,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_99129/4267267249.py:1: SettingWithCopyWarning: \n",
+      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_91625/4267267249.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -438,7 +438,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_99129/37548317.py:3: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_91625/37548317.py:3: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  df_range_9_14 = df_range_9_14[disagreement_df['dis_in_game'] > 8]\n"
      ]
     },
@@ -867,6 +867,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 20,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_91625/899180387.py:6: RuntimeWarning: invalid value encountered in double_scalars\n",
+      "  z_score = (mean_vec_maia[i] - mean_vec_leela[i]) / pooled_se\n"
+     ]
+    }
+   ],
+   "source": [
+    "from scipy import stats\n",
+    "for i in range(len(mean_vec_maia)):\n",
+    "    var1 = var_vec_maia[i]\n",
+    "    var2 = var_vec_leela[i]\n",
+    "    pooled_se = np.sqrt(var1 + var2)\n",
+    "    z_score = (mean_vec_maia[i] - mean_vec_leela[i]) / pooled_se\n",
+    "    critical_value = stats.norm.ppf(1 - 0.05 / 2)\n",
+    "    if abs(z_score) > critical_value:\n",
+    "        print(f\"Means of feature {board_feature_names[i]} are significantly different.\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 21,
    "outputs": [
     {
@@ -977,13 +1005,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_99129/1757629161.py:5: SettingWithCopyWarning: \n",
+      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_91625/1757629161.py:5: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  maia_better_df['eval_diff'] = maia_better_df['maia1200_eval'] - maia_better_df['leela10b2500_eval']\n",
-      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_99129/1757629161.py:6: SettingWithCopyWarning: \n",
+      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_91625/1757629161.py:6: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1430,7 +1458,7 @@
     "variance_vector_leela = np.var(vector_array_leela, axis=0)\n",
     "feature_names = {0: \"distance\", 1: \"king approach\", 2: \"advance/ retreat\", 3: \"flanking\", 4: \"pawn\", 5: \"rook\",\n",
     "                      6: \"knight\", 7: \"bishop\", 8: \"queen\", 9: \"king\", 10: \"check\", 11: \"capture\", 12: \"castle\"}\n",
-    "print(\"Leela's move features when it's move is better:\")\n",
+    "print(\"Leela's move features when its move is better:\")\n",
     "for i, (mean, var) in enumerate(zip(mean_vector_leela, variance_vector_leela)):\n",
     "    feature_name = feature_names.get(i, f\"Feature {i}\")\n",
     "    print(f\"{feature_name}: Mean = {mean.__round__(3)}, Variance = {var.__round__(3)}\")"
@@ -1802,7 +1830,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_99129/677063981.py:4: SettingWithCopyWarning: \n",
+      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_91625/677063981.py:4: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -1872,7 +1900,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_99129/201211316.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_91625/201211316.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -2005,7 +2033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 43,
    "outputs": [],
    "source": [
     "def calculate_percent_of_combination(total, bot_name1, bot_name2):\n",
@@ -2028,7 +2056,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 44,
    "outputs": [
     {
      "name": "stdout",
@@ -2053,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 45,
    "outputs": [],
    "source": [
     "def calculate_percent_of_combination_3(total, bot_name1, bot_name2, bot_name3):\n",
@@ -2081,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 46,
    "outputs": [
     {
      "name": "stdout",
@@ -2113,7 +2141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 47,
    "outputs": [],
    "source": [
     "def calculate_percent_of_combination_4(total, bot_name1, bot_name2, bot_name3, bot_name4):\n",
@@ -2141,7 +2169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 48,
    "outputs": [
     {
      "name": "stdout",
@@ -2190,7 +2218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 49,
    "outputs": [
     {
      "name": "stdout",
@@ -2314,7 +2342,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_99129/2223366257.py:4: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
+      "/var/folders/c_/fhx1wcfx75v13kxh3lwr6jrc0000gn/T/ipykernel_91625/2223366257.py:4: FutureWarning: iteritems is deprecated and will be removed in a future version. Use .items instead.\n",
       "  for col, series in board_feats_disagreements.iteritems():\n"
      ]
     }
