--- a/teacher_set_analysis.ipynb
+++ b/teacher_set_analysis.ipynb
@@ -1692,6 +1692,182 @@
    "metadata": {
     "collapsed": false
    }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [],
+   "source": [
+    "def calculate_percent_of_combination(total, bot_name1, bot_name2):\n",
+    "    ctr = 0\n",
+    "    cur_game = -1\n",
+    "    cur_bot = None\n",
+    "    for index, row in disagreement_df.iterrows():\n",
+    "        if cur_game != row['game']:\n",
+    "            cur_game = row['game']\n",
+    "            cur_bot = row['contributor']\n",
+    "            continue\n",
+    "        if cur_bot == bot_name1 and row['contributor'] == bot_name2:\n",
+    "            ctr += 1\n",
+    "        cur_bot = row['contributor']\n",
+    "    return (ctr / total) * 100"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of the bigram 'Maia-Maia': 18.496%\n",
+      "Percentage of the bigram 'Maia-Leela': 21.024%\n",
+      "Percentage of the bigram 'Leela-Maia': 22.351%\n",
+      "Percentage of the bigram 'Leela-Leela': 29.186%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Percentage of the bigram 'Maia-Maia': {calculate_percent_of_combination(len(disagreement_df), 'maia1200', 'maia1200').__round__(3)}%\")\n",
+    "print(f\"Percentage of the bigram 'Maia-Leela': {calculate_percent_of_combination(len(disagreement_df), 'maia1200', 'leela10b2500').__round__(3)}%\")\n",
+    "print(f\"Percentage of the bigram 'Leela-Maia': {calculate_percent_of_combination(len(disagreement_df), 'leela10b2500', 'maia1200').__round__(3)}%\")\n",
+    "print(f\"Percentage of the bigram 'Leela-Leela': {calculate_percent_of_combination(len(disagreement_df), 'leela10b2500', 'leela10b2500').__round__(3)}%\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [],
+   "source": [
+    "def calculate_percent_of_combination_3(total, bot_name1, bot_name2, bot_name3):\n",
+    "    ctr = 0\n",
+    "    cur_game = -1\n",
+    "    cur_bots = [None, None, None]\n",
+    "\n",
+    "    for index, row in disagreement_df.iterrows():\n",
+    "        if cur_game != row['game']:\n",
+    "            cur_game = row['game']\n",
+    "            cur_bots = [None, None, None]\n",
+    "            continue\n",
+    "\n",
+    "        cur_bots.pop(0)\n",
+    "        cur_bots.append(row['contributor'])\n",
+    "\n",
+    "        if cur_bots[0] == bot_name1 and cur_bots[1] == bot_name2 and cur_bots[2] == bot_name3:\n",
+    "            ctr += 1\n",
+    "\n",
+    "    return (ctr / total) * 100"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of the trigram maia1200, maia1200, maia1200: 7.057%\n",
+      "Percentage of the trigram maia1200, maia1200, leela10b2500: 7.562%\n",
+      "Percentage of the trigram maia1200, leela10b2500, maia1200: 7.888%\n",
+      "Percentage of the trigram maia1200, leela10b2500, leela10b2500: 9.279%\n",
+      "Percentage of the trigram leela10b2500, maia1200, maia1200: 8.556%\n",
+      "Percentage of the trigram leela10b2500, maia1200, leela10b2500: 9.606%\n",
+      "Percentage of the trigram leela10b2500, leela10b2500, maia1200: 10.409%\n",
+      "Percentage of the trigram leela10b2500, leela10b2500, leela10b2500: 13.185%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import product\n",
+    "\n",
+    "names = ['maia1200', 'leela10b2500']\n",
+    "\n",
+    "permutations_of_3 = list(product(names, repeat=3))\n",
+    "for perm in permutations_of_3:\n",
+    "    print(f\"Percentage of the trigram {perm[0]}, {perm[1]}, {perm[2]}: {calculate_percent_of_combination_3(len(disagreement_df), perm[0], perm[1], perm[2]).__round__(3)}%\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "outputs": [],
+   "source": [
+    "def calculate_percent_of_combination_4(total, bot_name1, bot_name2, bot_name3, bot_name4):\n",
+    "    ctr = 0\n",
+    "    cur_game = -1\n",
+    "    cur_bots = [None, None, None, None]\n",
+    "\n",
+    "    for index, row in disagreement_df.iterrows():\n",
+    "        if cur_game != row['game']:\n",
+    "            cur_game = row['game']\n",
+    "            cur_bots = [None, None, None, None]\n",
+    "            continue\n",
+    "\n",
+    "        cur_bots.pop(0)\n",
+    "        cur_bots.append(row['contributor'])\n",
+    "\n",
+    "        if cur_bots[0] == bot_name1 and cur_bots[1] == bot_name2 and cur_bots[2] == bot_name3 and cur_bots[3] == bot_name4:\n",
+    "            ctr += 1\n",
+    "\n",
+    "    return (ctr / total) * 100"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Percentage of the quadgram maia1200, maia1200, maia1200, maia1200: 2.893%\n",
+      "Percentage of the quadgram maia1200, maia1200, maia1200, leela10b2500: 2.983%\n",
+      "Percentage of the quadgram maia1200, maia1200, leela10b2500, maia1200: 3.148%\n",
+      "Percentage of the quadgram maia1200, maia1200, leela10b2500, leela10b2500: 3.575%\n",
+      "Percentage of the quadgram maia1200, leela10b2500, maia1200, maia1200: 3.304%\n",
+      "Percentage of the quadgram maia1200, leela10b2500, maia1200, leela10b2500: 3.574%\n",
+      "Percentage of the quadgram maia1200, leela10b2500, leela10b2500, maia1200: 3.809%\n",
+      "Percentage of the quadgram maia1200, leela10b2500, leela10b2500, leela10b2500: 4.554%\n",
+      "Percentage of the quadgram leela10b2500, maia1200, maia1200, maia1200: 3.538%\n",
+      "Percentage of the quadgram leela10b2500, maia1200, maia1200, leela10b2500: 3.814%\n",
+      "Percentage of the quadgram leela10b2500, maia1200, leela10b2500, maia1200: 3.993%\n",
+      "Percentage of the quadgram leela10b2500, maia1200, leela10b2500, leela10b2500: 4.644%\n",
+      "Percentage of the quadgram leela10b2500, leela10b2500, maia1200, maia1200: 4.405%\n",
+      "Percentage of the quadgram leela10b2500, leela10b2500, maia1200, leela10b2500: 4.92%\n",
+      "Percentage of the quadgram leela10b2500, leela10b2500, leela10b2500, maia1200: 5.36%\n",
+      "Percentage of the quadgram leela10b2500, leela10b2500, leela10b2500, leela10b2500: 6.707%\n"
+     ]
+    }
+   ],
+   "source": [
+    "from itertools import product\n",
+    "\n",
+    "names = ['maia1200', 'leela10b2500']\n",
+    "\n",
+    "permutations_of_4 = list(product(names, repeat=4))\n",
+    "for perm in permutations_of_4:\n",
+    "    print(f\"Percentage of the quadgram {perm[0]}, {perm[1]}, {perm[2]}, {perm[3]}: {calculate_percent_of_combination_4(len(disagreement_df), perm[0], perm[1], perm[2], perm[3]).__round__(3)}%\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
