--- a/first_analysis.ipynb
+++ b/first_analysis.ipynb
@@ -2961,14 +2961,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 187,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.069\n",
-      "R-squared: 0.042\n"
+      "One-Zero Misclassification Error: 0.37\n"
      ]
     }
    ],
@@ -2976,16 +2975,28 @@
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "\n",
     "y = disagreement_df['eval_diff']\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_transformed, y, test_size=0.2, random_state=42)\n",
     "model = LinearRegression()\n",
     "model.fit(X_train, y_train)\n",
     "y_pred = model.predict(X_test)\n",
-    "mse = mean_squared_error(y_test, y_pred)\n",
-    "r2 = r2_score(y_test, y_pred)\n",
-    "print(f\"Mean Squared Error: {mse.__round__(3)}\")\n",
-    "print(f\"R-squared: {r2.__round__(3)}\")"
+    "for i in range(len(y_pred)):\n",
+    "    if y_pred[i] > 0:\n",
+    "        y_pred[i] = 1\n",
+    "    else:\n",
+    "        y_pred[i] = 0\n",
+    "y = disagreement_df['contributor']\n",
+    "y = y.apply(lambda x: 1 if x == 'maia1200' else 0)\n",
+    "y = y.to_numpy()\n",
+    "misclassified = 0\n",
+    "for i in range(len(y_pred)):\n",
+    "    if y_pred[i] != y[i]:\n",
+    "        misclassified += 1\n",
+    "total_samples = len(y_pred)\n",
+    "misclassification_error = misclassified / total_samples\n",
+    "\n",
+    "print(\"One-Zero Misclassification Error:\", misclassification_error.__round__(3))"
    ],
    "metadata": {
     "collapsed": false
