--- a/teacher_set_analysis.ipynb
+++ b/teacher_set_analysis.ipynb
@@ -19,6 +19,8 @@
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "\n",
     "from utils import *\n",
     "from chess_feature_extractors import *\n",
     "import matplotlib.pyplot as plt\n",
@@ -2618,14 +2620,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 247,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean Squared Error: 0.025\n",
-      "R-squared: 0.014\n"
+      "One-Zero Misclassification Error: 0.458\n"
      ]
     }
    ],
@@ -2639,10 +2640,22 @@
     "model = LinearRegression()\n",
     "model.fit(X_train, y_train)\n",
     "y_pred = model.predict(X_test)\n",
-    "mse = mean_squared_error(y_test, y_pred)\n",
-    "r2 = r2_score(y_test, y_pred)\n",
-    "print(f\"Mean Squared Error: {mse.__round__(3)}\")\n",
-    "print(f\"R-squared: {r2.__round__(3)}\")"
+    "for i in range(len(y_pred)):\n",
+    "    if y_pred[i] > 0:\n",
+    "        y_pred[i] = 1\n",
+    "    else:\n",
+    "        y_pred[i] = 0\n",
+    "y = disagreement_df['contributor']\n",
+    "y = y.apply(lambda x: 1 if x == 'maia1200' else 0)\n",
+    "y = y.to_numpy()\n",
+    "misclassified = 0\n",
+    "for i in range(len(y_pred)):\n",
+    "    if y_pred[i] != y[i]:\n",
+    "        misclassified += 1\n",
+    "total_samples = len(y_pred)\n",
+    "misclassification_error = misclassified / total_samples\n",
+    "\n",
+    "print(\"One-Zero Misclassification Error:\", misclassification_error.__round__(3))"
    ],
    "metadata": {
     "collapsed": false
@@ -2659,16 +2672,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean Squared Error: 0.043\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "from sklearn.tree import DecisionTreeRegressor\n",
     "model = DecisionTreeRegressor(random_state=42)\n",
@@ -2679,7 +2684,10 @@
     "print(f\"Mean Squared Error: {mse.__round__(3)}\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "pycharm": {
+     "is_executing": true
+    }
    }
   }
  ],
